# lavender-stock-prediction

./: .replit  README.md  SPY.csv  app.py  app2.py  app3.py  app4.py  app5.py  app6.py  prediction.py  pyproject.toml
templates/: index.html  index2.html  index3.html  index4.html  index6.html  index7.html
