[tool.poetry]
name = "repl-nix-lavender-stock-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_lavender_stock_prediction"}]

[tool.poetry.dependencies]
python = "^3.12"
xgboost = "^2.1.0"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
